2007-10-30  Christian Faulhammer (v-li@users.sourceforge.net)

	* docs/doc2texi.el: Gentoo patch to allow for changed handling of
	newlines in up-coming version of XEmacs. Needed in order to 
	regenerate gnuplot.texi on such a system.
	Bug #1822610

2007-10-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Document option "pm3d depthorder" within
	"help pm3d".

2007-10-23  Christer Lundberg  <ssslub@users.sourceforge.net>

	* term/post.trm: A font name containing spaces must be protected by
	parentheses in PostScript output.

2007-10-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Load first/second axis information into 
	the head of the label list for plot mode LABELPOINTS.
	Bug #1807015

2007-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/binary.c src/binary.h src/bf_test.c: Rename the routine vector()
	to alloc_vector().  This avoids a conflict with the "vector" keyword on
	PowerPC OSX with Altivec compiler options enabled.
	Bug #1754164

2007-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (bound_intersect):  Fix a degenerate case in the
	intersection test that caused a divide by zero.
	Bug #1805697

2007-09-29  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* term/Postscript/prologue.ps: Add an explicit 'closepath' before
	filling a rectangle. This is not required by the language spec, but
	works around a bug in Adobe Distiller 7 and Apple's Quartz Preview.
	Bug #1771533

2007-09-28  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* src/graphics.c (do_plot):  It is necessary to call
	term->previous_palette() at the end of any 2D plot or 3D plot
	that used custom rgb colors.
	Bug #1803337

2007-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): On log scale plots with very large range,
	the minitic interval can overflow integer representation.
	Bug #1797500

	* term/gd.trm (PNG_image):  gdImageGetClip was introduced in libgd