@@ -1,3 +1,9 @@
+2007-11-02  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/internal.c (f_sprintf) docs/gnuplot.doc:
+	Remove limitation of 10 args max to internal function sprintf().
+	Bug #1753756.
+
 2007-10-30  Christian Faulhammer (v-li@users.sourceforge.net)
 
 	* docs/doc2texi.el: Gentoo patch to allow for changed handling of
